# ROS_Primer

ROS2_Arduino_ESP32/1_Chapter/: 1_ROS2_Arduino.md
ROS2_Arduino_ESP32/2_Chapter/: 2_Arduino_syn.md
ROS2_Arduino_ESP32/3_Chapter/: 3_ROS2_Ardu_demo.md
ROS2_Arduino_ESP32/4_Chapter/: 4_MicroROS初步体验.md
ROS2_CAR/: .gitignore
ROS2_CAR/1_Chapter/: 1_docker命令熟悉.md
ROS2_CAR/2_Chapter/: 2_ROS2驱动电机.md
ROS2_CAR/ros1_ws/ROSArduinoBridge/: motor_driver.ino
ROS2_CAR/ros1_ws/src/ros1_car/: CMakeLists.txt  package.xml
ROS2_CAR/ros1_ws/src/ros1_car/launch/: start_motion_laser.launch  start_slam.launch  start_tf_motion_laser.launch
ROS2_CAR/ros1_ws/src/ros1_laser/hls_lfcd_lds_driver-melodic-devel/launch/: view_hlds_laser.launch  view_hlds_laser_segment_publisher.launch
ROS2_CAR/ros1_ws/src/ros1_laser/hls_lfcd_lds_driver-melodic-devel/src/: hlds_laser_publisher.cpp  hlds_laser_segment_publisher.cpp
ROS2_CAR/ros1_ws/src/ros1_motion/ros_arduino_python/config/: my_arduino_params.yaml
ROS2_CAR/ros1_ws/src/ros1_navi/: CMakeLists.txt  package.xml
ROS2_CAR/ros1_ws/src/ros1_navi/launch/: map_load.launch  map_save.launch  params_amcl.launch  params_gmapping.launch  params_move_base.launch  test_amcl.launch  test_gammping.launch  test_move_base.launch  test_slam.launch
ROS2_CAR/ros1_ws/src/ros1_navi/map/: test_map.pgm  test_map.yaml
ROS2_CAR/ros2_ws/src/ros2_motion/ros2_arduino_bridge/params/: arduino.yaml
ROS2_CAR/ros2_ws/src/ros2_motion/ros2_arduino_bridge/ros2_arduino_bridge/: arduino_driver.py  arduino_node.py
ROS2_DEMO/1_Chapter/code/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_DEMO/1_Chapter/code/install/vscodeCppDemo/lib/vscodeCppDemo/: vscodeCppDemoNode
ROS2_DEMO/1_Chapter/code/install/vscodeCppDemo/share/vscodeCppDemo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_DEMO/1_Chapter/code/install/vscodePythonDemo/lib/vscodePythonDemo/: vscodePythonDemoNode
ROS2_DEMO/1_Chapter/code/install/vscodePythonDemo/share/vscodePythonDemo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_DEMO/1_Chapter/code/vscodeCppDemo/: CMakeLists.txt
ROS2_DEMO/1_Chapter/code/vscodeCppDemo/src/: vscodeCppDemoNode.cpp
ROS2_DEMO/1_Chapter/code/vscodePythonDemo/: package.xml  setup.cfg  setup.py
ROS2_DEMO/1_Chapter/code/vscodePythonDemo/vscodePythonDemo/: vscodePythonDemoNode.py
ROS2_DEMO/1_Chapter/markdown/: 1_Ubuntu配置与ROS2快速体验.md
ROS2_DEMO/2_Chapter/: 2_2_ROS2话题通讯提升.md
ROS2_DEMO/2_Chapter/code/cppBaseMsgPub/: CMakeLists.txt  package.xml
ROS2_DEMO/2_Chapter/code/cppBaseMsgPub/src/: cppBaseMsgPubNode.cpp
ROS2_DEMO/2_Chapter/code/cppBaseMsgSub/: CMakeLists.txt  package.xml
ROS2_DEMO/2_Chapter/code/cppBaseMsgSub/src/: cppBaseMsgSubNode.cpp
ROS2_DEMO/2_Chapter/code/cpp_idl_pub/: CMakeLists.txt
ROS2_DEMO/2_Chapter/code/cpp_idl_pub/src/: cppIdlPubNode.cpp
ROS2_DEMO/2_Chapter/code/cpp_idl_sub/: CMakeLists.txt  package.xml
ROS2_DEMO/2_Chapter/code/cpp_idl_sub/src/: cppIdlSubNode.cpp
ROS2_DEMO/2_Chapter/code/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_DEMO/2_Chapter/code/install/cpp_idl_pub/lib/cpp_idl_pub/: cppIdlPubNode
ROS2_DEMO/2_Chapter/code/install/cpp_idl_pub/share/cpp_idl_pub/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_DEMO/2_Chapter/code/install/cpp_idl_sub/lib/cpp_idl_sub/: cppIdlSubNode
ROS2_DEMO/2_Chapter/code/install/cpp_idl_sub/share/cpp_idl_sub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ROS2_DEMO/2_Chapter/code/install/python_idl_pub/lib/python_idl_pub/: pythonIdlPubNode
ROS2_DEMO/2_Chapter/code/msg_demo/: CMakeLists.txt  package.xml
ROS2_DEMO/2_Chapter/code/pythonBaseMsgPub/: package.xml  setup.cfg  setup.py
ROS2_DEMO/2_Chapter/code/pythonBaseMsgPub/pythonBaseMsgPub/: pythonBaseMsgPubNode.py
ROS2_DEMO/2_Chapter/code/pythonBaseMsgSub/: package.xml  setup.cfg  setup.py
ROS2_DEMO/2_Chapter/code/pythonBaseMsgSub/pythonBaseMsgSub/: pythonBaseMsgSubNode.py
ROS2_DEMO/2_Chapter/code/python_idl_pub/: package.xml  setup.cfg  setup.py
ROS2_DEMO/2_Chapter/code/python_idl_sub/: setup.cfg  setup.py
ROS2_DEMO/2_Chapter/code/student_msg/: CMakeLists.txt  package.xml
ROS2_DEMO/2_Chapter/code/student_msg/msg/: Student.msg
ROS2_DEMO/2_Chapter/markdown/: 2_1_ROS2话题通讯基础.md
ROS2_DEMO/3_Chapter/: 3_1_ROS2服务通讯.md
ROS2_DEMO/3_Chapter/code/cpp_srv_client/: CMakeLists.txt  package.xml
ROS2_DEMO/3_Chapter/code/cpp_srv_client/src/: cppSrvClientNode.cpp
ROS2_DEMO/3_Chapter/code/cpp_srv_server/: CMakeLists.txt  package.xml
ROS2_DEMO/3_Chapter/code/cpp_srv_server/src/: cppSrvServerNode.cpp
ROS2_DEMO/3_Chapter/code/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_DEMO/3_Chapter/code/python_srv_client/: package.xml  setup.cfg  setup.py
ROS2_DEMO/3_Chapter/code/python_srv_client/python_srv_client/: pythonSrvClientNode.py
ROS2_DEMO/3_Chapter/code/python_srv_server/: package.xml  setup.cfg  setup.py
ROS2_DEMO/3_Chapter/code/srv_demo/: CMakeLists.txt
ROS2_DEMO/4_Chapter/code/cpp_para_client/: CMakeLists.txt  package.xml
ROS2_DEMO/4_Chapter/code/cpp_para_client/src/: cppParaCliNode.cpp
ROS2_DEMO/4_Chapter/code/cpp_para_server/: CMakeLists.txt
ROS2_DEMO/4_Chapter/code/cpp_para_server/src/: cppParaSerNode.cpp
ROS2_DEMO/4_Chapter/code/install/: local_setup.sh  setup.sh
ROS2_DEMO/4_Chapter/code/python_para_cli/: package.xml  setup.cfg  setup.py
ROS2_DEMO/4_Chapter/code/python_para_cli/python_para_cli/: pythonParaCliNode.py
ROS2_DEMO/4_Chapter/code/python_para_ser/: package.xml  setup.cfg  setup.py
ROS2_DEMO/4_Chapter/markdown/: 4_1_ROS2参数服务器基础.md
ROS2_ESP32/markdown/: 1_MicroROS初步体验.md
ROS2_NAVI/1_Chapter/code/: mapping.sh  naviWorld.sh  simNavi2.sh  telep.sh
ROS2_NAVI/1_Chapter/code/bugs/: frames_2023-05-20_12.22.28.gv
ROS2_NAVI/1_Chapter/code/map/: testMap.pgm  testMap.yaml
ROS2_NAVI/1_Chapter/markdown/: 1_通过Turtlebot3案例了解NAVI2.md
(+138 files in other folders)
